<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Solve2">

    <Button
        android:id="@+id/ollNext"
        android:layout_width="279dp"
        android:layout_height="57dp"
        android:layout_marginBottom="144dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"

        android:onClick="ollBtClick"
        android:text="@string/okbt"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ollAlg"
        android:layout_width="279dp"
        android:layout_height="57dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/ollAlg"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/ollNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/generalHelp"
        android:layout_width="315dp"
        android:layout_height="89dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/generalHelp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ollHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ollHelp"
        android:layout_width="315dp"
        android:layout_height="89dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/ollHelp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="188dp"
        android:layout_height="169dp"
        app:layout_constraintBottom_toTopOf="@+id/ollAlg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:fontFamily="@font/poppins_bold"
        android:textSize="15sp"
        android:text="@string/next"
        android:onClick="toPLL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ollNext" />
</androidx.constraintlayout.widget.ConstraintLayout>